add database files

--- a/FoodStore/bin/FoodStore.dll.config
+++ b/FoodStore/bin/FoodStore.dll.config
@@ -25,7 +25,7 @@
 		<defaultDocument>
 			<files>
 				<clear />
-				<add value="Homea.aspx" />
+				<add value="Home.aspx" />
 			</files>
 		</defaultDocument>
 	</system.webServer>
